# titan-sako

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  architecture.md  docker-compose.yml  prompt-log.md  pyproject.toml  tasks.md
app/: main.py
app/api/: deps.py
app/api/v1/: ingestion.py  logs.py  reading_lists.py  tenants.py  works.py
app/core/: config.py  database.py  security.py
app/models/: ingestion_log.py  reading_list.py  tenant.py  work.py
app/repositories/: log_repo.py  work_repo.py
app/services/: ingestion.py  ol_client.py  reading_list.py
bruno/Open Library Catalog Service/: bruno.json
bruno/Open Library Catalog Service/admin/: Create Tenant.bru  List Tenants.bru
bruno/Open Library Catalog Service/environments/: local.bru
bruno/Open Library Catalog Service/ingestion/: Trigger Ingestion - Author.bru  (+1 more)
decisions/: adr_001_fastapi-and-sqlite.md  adr_template.md
docker/: Dockerfile
docs/: notes.md
prompts/: architecture_review.md  code_review.md  generate_tests.md  implement_task.md  mermaid.md  refactor.md
specs/: api.md  requirements.md  schema.md
tests/: conftest.py
tests/e2e/: test_docker_e2e.py
tests/integration/: test_health.py  test_ingestion_endpoint.py  test_logs.py  test_ol_client.py  test_reading_lists.py  test_tenants.py  test_works.py
tests/unit/: test_config.py  test_database.py  test_ingestion.py  test_ingestion_log_model.py  test_ol_client.py  test_reading_list_model.py  test_reading_list_service.py  test_security.py  test_tenant_model.py  test_work_model.py  test_work_repo.py
(+8 files in other folders)
